--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Treemap Diagram</title>
 
 		<!-- Favicons -->
 		<link
@@ -47,7 +47,7 @@
 			<nav class="navbar bg-body-tertiary border-bottom border-2">
 				<div class="container-fluid">
 					<span class="navbar-brand mb-0 h1 fw-bold fs-3 mx-auto">
-						Document
+						Treemap Diagram
 					</span>
 				</div>
 			</nav>
@@ -59,7 +59,7 @@
 				<script>
 					document.write(new Date().getFullYear());
 				</script>
-				Document. Created By
+				Treemap Diagram. Created By
 				<a
 					class="text-primary"
 					href="https://github.com/GDA0"
