--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
 			crossorigin="anonymous"
 		></script>
 
+		<!-- Dependent libraries -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/d3-scale-chromatic@3.0.0/dist/d3-scale-chromatic.min.js"></script>
+
 		<!-- Custom JS -->
 		<script src="script.js"></script>
+
+		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 	</body>
 </html>
